--- a/ProjetoLINCE/app/src/main/AndroidManifest.xml
+++ b/ProjetoLINCE/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".Dashboard" android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"/>
         <activity android:name=".MainActivity" android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"/>
         <activity android:name=".AddCredito" android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"/>
         <activity android:name=".TelaPrincipal" android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"/>
