--- a/ProjetoLINCE/app/src/main/AndroidManifest.xml
+++ b/ProjetoLINCE/app/src/main/AndroidManifest.xml
@@ -9,15 +9,28 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Dashboard" android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"/>
-        <activity android:name=".MainActivity" android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"/>
-        <activity android:name=".AddCredito" android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"/>
-        <activity android:name=".TelaPrincipal" android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"/>
-        <activity android:name=".EsqueciSenha" android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"/>
-        <activity android:name=".Cadastrar" android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"/>
-        <activity android:name=".TrocarSenha" android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"/>
-        <activity android:name=".SplashScreen"
-                  android:theme="@style/Theme.AppCompat.DayNight.NoActionBar">
+        <activity android:name=".menu_opcoes" android:theme="@style/Theme.AppCompat.NoActionBar"/>
+        <activity
+            android:name=".MainActivity"
+            android:theme="@style/Theme.AppCompat.DayNight.NoActionBar" />
+        <activity
+            android:name=".AddCredito"
+            android:theme="@style/Theme.AppCompat.DayNight.NoActionBar" />
+        <activity
+            android:name=".TelaPrincipal"
+            android:theme="@style/Theme.AppCompat.DayNight.NoActionBar" />
+        <activity
+            android:name=".EsqueciSenha"
+            android:theme="@style/Theme.AppCompat.DayNight.NoActionBar" />
+        <activity
+            android:name=".Cadastrar"
+            android:theme="@style/Theme.AppCompat.DayNight.NoActionBar" />
+        <activity
+            android:name=".TrocarSenha"
+            android:theme="@style/Theme.AppCompat.DayNight.NoActionBar" />
+        <activity
+            android:name=".SplashScreen"
+            android:theme="@style/Theme.AppCompat.DayNight.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
