Criando o adapter e a activity para mostrar as compras de credito , não conseguir trazer elas as compras estão vindo vazias

--- a/ProjetoLINCE/app/src/main/AndroidManifest.xml
+++ b/ProjetoLINCE/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".ListarCompras" android:theme="@style/Theme.AppCompat.NoActionBar"/>
         <activity android:name=".menu_opcoes" android:theme="@style/Theme.AppCompat.NoActionBar"/>
         <activity
             android:name=".MainActivity"
